tweking styling and spacing in show and fixing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,5 +29,5 @@ nav {
 }
 
 li {
-  font-size: 0.5em;
+  font-size: 1.25em;
 }
